small typos and continue button fix

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
       </div>
     </div>
 
-      <div class="continue-button">continue</div>
+        
+    <a href="index.html" class="continue-button">continue</a>
+
+
+    </div>
 
     </div>
 
