--- a/index.html
+++ b/index.html
@@ -4,121 +4,127 @@
 <head>
 
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Results summary component</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+  <div class="container">
+    <nav>
+      <img id="uni-logo" src="assets/images/cu-logo.png" alt="uni-logo">
+      <!--  <a class="uni-name" href="index.html">University of Calcutta</a>  -->
+      <ul class="navlist">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Academics</a></li>
+        <li><a href="#">Departments</a></li>
+        <li><a href="#">Library</a></li>
+        <li><a href="#">Facilities</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <div class="login-button">
+      <a href="https://durjoydutta.github.io/teamdkz/" target="_blank" class="login"><img src="assets/images/login-64.png" alt="login"></a>
+    </div>
+    </nav>
 
 
-  <div class="wrapper">
+    <div class="wrapper">
 
-
-
-
-
-
-
-
-    <div class="left-col">
-      <span class="hero">Your Result</span>
-      <div class="my-score">
-        <div class="obtained-score">76</div>
-        <div class="total-score">of 100</div>
+      <div class="left-col">
+        <span class="hero">Your Result</span>
+        <div class="my-score">
+          <div class="obtained-score">76</div>
+          <div class="total-score">of 100</div>
+        </div>
+        <div class="remark">Great</div>
+        <p class="detailed-remark">You scored higher than 65% of the people who have taken these tests.
+        </p>
       </div>
-      <div class="remark">Great</div>
-      <p class="detailed-remark">You scored higher than 65% of the people who have taken these tests.
-      </p>
+
+
+
+
+
+
+
+
+      <div class="right-col">
+
+
+
+        <div class="summary">
+          Summary
+        </div>
+        <div class="scorecard">
+          <div id="stats" class="one">
+            <img src="assets/images/icon-reaction.svg" alt="reaction logo">
+            <div class="reac">
+              Reaction
+            </div>
+            <div class="score">
+              80
+              <div class="out-of">/ 100</div>
+            </div>
+          </div>
+
+
+          <div id="stats" class="two">
+            <img src="assets/images/icon-memory.svg" alt="memory logo">
+            <div class="mem">
+              Memory
+            </div>
+            <div class="score">
+              92
+              <div class="out-of">/ 100</div>
+            </div>
+          </div>
+
+          <div id="stats" class="three">
+            <img src="assets/images/icon-verbal.svg" alt="verbal logo">
+            <div class="ver">
+              Verbal
+            </div>
+            <div class="score">
+              61
+              <div class="out-of">/ 100</div>
+            </div>
+          </div>
+
+          <div id="stats" class="four">
+            <img src="assets/images/icon-visual.svg" alt="verbal logo">
+            <div class="vis">
+              Visual
+            </div>
+            <div class="score">
+              72
+              <div class="out-of">/ 100</div>
+            </div>
+          </div>
+        </div>
+
+
+        <a href="index.html" class="continue-button">continue</a>
+
+
+      </div>
+
     </div>
 
+  </div>
 
 
 
-
-
-
-
-    <div class="right-col">
-
-
-
-      <div class="summary">
-        Summary
-      </div>
-      <div class="scorecard">
-      <div id = "stats" class="one">
-        <img src="assets/images/icon-reaction.svg" alt="reaction logo">
-        <div class="reac">
-          Reaction
-        </div>
-        <div class="score">
-          80
-          <div class="out-of">/ 100</div> 
-        </div>
-      </div>
-
-
-      <div id = "stats" class="two">
-        <img src="assets/images/icon-memory.svg" alt="memory logo">
-        <div class="mem">
-          Memory
-        </div>
-        <div class="score">
-          92
-          <div class="out-of">/ 100</div> 
-        </div>
-      </div>
-
-      <div id = "stats" class="three">
-        <img src="assets/images/icon-verbal.svg" alt="verbal logo">
-        <div class="ver">
-          Verbal
-        </div>
-        <div class="score">
-          61
-          <div class="out-of">/ 100</div> 
-        </div>
-      </div>
-
-      <div id = "stats" class="four">
-        <img src="assets/images/icon-visual.svg" alt="verbal logo">
-        <div class="vis">
-          Visual
-        </div>
-        <div class="score">
-          72
-          <div class="out-of">/ 100</div> 
-        </div>
-      </div>
-    </div>
-
-        
-    <a href="index.html" class="continue-button">continue</a>
-
-
-    </div>
-
-    </div>
-
-
-    
-
-
-  </div> 
-
-
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">@durjoydutta</a>.
+    Coded by <a href="https://linkedin.com/in/durjoydutta" target="_blank">DDC &copy; </a>.
+  </div>
   </div>
 </body>
 
