--- a/index.html
+++ b/index.html
@@ -119,13 +119,9 @@
 
     </div>
 
-  </div>
-
-
-
-  <div class="attribution">
-    Coded by <a href="https://linkedin.com/in/durjoydutta" target="_blank">DDC &copy; </a>.
-  </div>
+    <div class="attribution">
+      Coded by - <a href="https://linkedin.com/in/durjoydutta" target="_blank">DDC &copy;</a>
+    </div>
   </div>
 </body>
 
