--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
 
           <div id="stats" class="four">
-            <img src="assets/images/icon-visual.svg" alt="verbal logo">
+            <img src="/assets/images/icon-visual.svg" alt="visual logo">
             <div class="vis">
               Visual
             </div>
